# PZServerManager

./: .dockerignore  .flake8  .gitignore  .sonarcloud.properties  Dockerfile  LICENSE  README.md  env.env  mods.db  pyproject.toml  sonar-project.properties
.github/workflows/: docker-image.yml
Rcon/: __init__.py  rcon.py
SteamCollection/: __init__.py  steam_collection.py
pz_server_manager/: __init__.py  config.py  routes.py
pz_server_manager/home/: interactions.py  routes.py
pz_server_manager/server/: __init__.py
pz_server_manager/server/db/: mod.py
pz_server_manager/server/docker/: __init__.py
pz_server_manager/server/file_parser/: __init__.py  file_parser.py  modlist.py  server_settings.py
pz_server_manager/server/file_parser/models/: log.py
pz_server_manager/server/rcon/: rcon.py
pz_server_manager/static/assets/css/: style.css
pz_server_manager/static/assets/js/: interaction.js  interactions.js
pz_server_manager/templates/home/: logs.html  mods.html
pz_server_manager/templates/includes/: modlist.j2  navigation.html  scripts.html  sidebar.html
pz_server_manager/templates/layouts/: base-fullscreen.html  base.html
steam_api/: collection.py  mod.py  utilities.py
